--- a/react-training/src/App.scss
+++ b/react-training/src/App.scss
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +30,97 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+@media (min-width: 1350px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1300px !important;
+  }
+}
+
+.app-container {
+  .header-container {
+    .btn-login {
+      border-radius: 5px;
+      margin-right: 15px;
+      padding: 0 15px;
+      border: 1px solid #535353;
+    }
+    .btn-signup {
+      border-radius: 5px;
+      padding: 0 15px;
+      background: #303030;
+      color: whitesmoke;
+
+      &:hover {
+        background: black;
+      }
+    }
+    .navbar {
+      z-index: 10;
+      // opacity: 0.6;
+      background-color: rgba(0, 0, 0, 0) !important;
+      .nav-link {
+        &.active {
+          color: #61dafb;
+        }
+      }
+    }
+  }
+
+  .homepage-container {
+    .homepage-content {
+      color: whitesmoke;
+      padding: 100px;
+      width: 40%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      .title-1 {
+        font-size: 45px;
+        font-weight: 600;
+      }
+
+      .title-2 {
+        font-size: 25px;
+      }
+
+      .title-3 {
+        button {
+          border-radius: 5px;
+          height: 40px;
+          padding: 0 15px;
+          background: #303030;
+          color: whitesmoke;
+
+          &:hover {
+            background: red;
+          }
+        }
+      }
+    }
+  }
+}
+
+video {
+  position: fixed;
+  top: 10;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
